[project]
name = "cargo"
version = "0.1.1"
description = "Cargo Fish App deployment for Vercel"
requires-python = ">=3.12"
dependencies = [
  "flask",
  "requests",
  "flask-mail",
  "python-dotenv",
  "psycopg[binary]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cargo_fish_app*"]

[tool.setuptools.package-data]
cargo_fish_app = ["templates/**", "static/**", "*.json", "*.png"]
